stage-4/ecomm-virtualservice-erpb-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: erpb
spec:
  hosts:
  - erpb
  http:
  - route:
    - destination:
        host: erpb
        subset: v2
